<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MapActivity">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="example.javatpoint.com.kotlingooglemapcurrentlocation.MapsActivity" />

        <TextView
            android:id="@+id/startin_point"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:padding="8dp"
            android:textSize="22dp"
            android:background="@drawable/text_field"
            android:backgroundTint="#786A78"
            android:text="@string/starting_point"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/end_point"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textSize="22dp"
            android:background="@drawable/text_field"
            android:backgroundTint="#786A78"
            android:text="@string/end_point"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:padding="8dp"            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/startin_point" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/find_route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/find_button"
            android:backgroundTint="#512C51"
            android:padding="5dp"
            android:text="@string/find_route"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_point"
            app:layout_constraintVertical_bias="0.09"
            tools:layout_editor_absoluteX="39dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
